# control_agent

./: .env.example  .gitignore  AGENTS.md  README.md  bettle.txt  demo-license.json  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
.skills/: README.md  analyze_image.json  domestic_linux_adaptation.json  duckduckgo_search.json  execute_terminal_command.json  get_current_system_time.json  read_webpage.json  safe_terminal_gateway.json  transcribe_audio.json
.tmp/docker-apt/archives/: libgdk-pixbuf-2.0-0_2.42.12+dfsg-4+deb13u1_amd64.deb  libssl3t64_3.5.5-1~deb13u2_amd64.deb  openssl-provider-legacy_3.5.5-1~deb13u2_amd64.deb  openssl_3.5.5-1~deb13u2_amd64.deb
.tmp/docker-apt/lists/partial/: apt.postgresql.org_pub_repos_apt_dists_trixie-pgdg_InRelease  deb.debian.org_debian_dists_trixie-updates_InRelease  (+5 more)
.tmp/local-app-ref/: frontend-reference.json  frontend-reference.md  raw-capture.json
.tmp/local-app-ref-after/: frontend-reference.json  frontend-reference.md  raw-capture.json
.tmp/rive-login-ref/: frontend-reference.json  frontend-reference.md  raw-capture.json
.tmp/thesis_screenshots/: activation-page.html  login-page.html  memory-terminal-idle.html  memory-terminal-summary.html  styles.css
control_agent/: README.md  requirements.txt
control_agent/scripts/: audio_transcribe_tool.py  dingtalk_stream_bot.py  duckduckgo_search_tool.py
docs/: 文件中文讲解.md
license_tool/: Cargo.toml  README.md
license_tool/src/: main.rs
scripts/: build_linux_bundle_in_docker.sh  prepare_linux_bundle.sh  prepare_windows_bundle.ps1  render_temp_thesis_screenshots.ps1
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activation.rs  app.rs  assets.rs  audio.rs  auth.rs  command_runner.rs  constants.rs  dingtalk.rs  env.rs  events.rs  history.rs  lib.rs  licensing.rs  llm.rs  logging.rs  main.rs  models.rs  python.rs  runtime_paths.rs  search.rs  settings.rs  skills.rs  system_time.rs  tests.rs  vision.rs  webpage.rs
src/components/: ActivationScreen.tsx  AuthScreen.tsx  ConversationList.tsx  MessageAttachments.tsx
src/lib/: llm.ts  utils.ts
src/types/: ui.ts
