[package]
name = "license_tool"
version = "0.1.0"
edition = "2021"
description = "Offline license issuer for AI-Universal-Assistant"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hostname = "0.4"
mac_address = "1.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
