# Rust / Tauri 后端依赖配置文件。
# 这里声明桌面端应用的元信息，以及运行后端逻辑所需的依赖。
[package]
name = "ai-universal-assistant"
version = "0.1.0"
description = "Cross-platform AI desktop assistant built with Tauri"
authors = ["86153"]
edition = "2021"

[lib]
name = "ai_universal_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
dotenvy = "0.15"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
encoding_rs = "0.8"
futures-util = "0.3"
hostname = "0.4"
mac_address = "1.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["io-util", "process", "rt", "sync"] }
